# strands-agents-gradio

./: .gitignore  CLAUDE.md  README.md  config.json  main.py  mcp_tools.py  pyproject.toml  simple_chat.py  strands-agents.ipynb  strands_agents_sample.ipynb
.claude/: settings.json
.devcontainer/: devcontainer.json
