[project]
name = "strands-agents-gradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "gradio>=5.35.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "strands-agents>=0.1.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
